  - Initial implementation of EntitySync feature with example in the
    example component; should be considered beta but has gone through
    various tests in non-production environments
  - Added entity.@enable-audit-log attribute which is used as the default
    for all fields of the entity
  - Added EntityAuditLog.artifactStack field with the artifact stack used
    to do the audited update

Bug Fixes:

- Fixed security issue where current password was stored in
  UserPasswordHistory with 2-way encryption. Now only previous passwords
  are stored in UserPasswordHistory on password change, and they are stored
  in the hashed (one-way encrypted) form along with the salt and hash type.
- Fixed delete buttons not working on the Find Auto Screen
- Fixed links with images (link.image element) FTL error
- Required service parameters used to use the Groovy definition of empty
  but this is annoying for numbers and such (a zero is generally a valid
  non-empty service parameter), so now uses null for any object or zero
  length String as the definition of empty for required parameters
- Fixed issues with complex-alias where aliased entities were not add
  to list of aliased entities used and alias level function was not added
- Fixed tx cache issue where a value could be updated after putting it into
  the cache causing an attempt to read the original to get an updated value
- Changed ResourceReference.init() to use ExecutionContextFactory instead
  of ExecutionContext for cases where the object is long-lived
- Fixed search#DataDocuments issues with documentType parameter, adding it
  to the count query (was getting wrong counts because it was left out),
  set to null if an empty String as ElasticSearch treats that as a real one
- Fixed issue with a distinct query where order by fields are not selected,
  Entity Facade now automatically selects order by fields for distinct
  queries
- Fixed issue with merging row-actions in list forms, was cloning